Implement GTNHLib teams